Fix AuthPage modal content height wrapping
- Add CSS to make mx_Dialog_border fill parent mx_AuthPage_modalContent height
- Comment out modal border styling in AuthPage component

--- a/res/css/views/auth/_AuthPage.pcss
+++ b/res/css/views/auth/_AuthPage.pcss
@@ -24,3 +24,10 @@ Please see LICENSE files in the repository root for full details.
     background-color: $authpage-modal-bg-color;
     overflow: hidden;
 }
+
+.mx_AuthPage_modalContent {
+    .mx_Dialog_border {
+        height: 100%;
+        max-height: 100%;
+    }
+}
